Fixed alignment of timeline section

--- a/frontend/css/startupLogin.css
+++ b/frontend/css/startupLogin.css
@@ -489,7 +489,7 @@ position: relative;
 }
 
 .carousel2 {
-  height: 420px;
+  height: 270px;
 }
 
 .carousel {
